# Bot

./: pyproject.toml
data/: best_settings.json  data.csv  data_mini.csv  model_performances.csv  secret.py  settings.json  settings.py  studies.csv  study_results.csv
scripts/: darts_models.ipynb  model.ipynb  model_evaluator.ipynb  run_darts.py
src/: darts_models.py  darts_tools.py  model_evaluator.py  model_tools.py  study.py
tests/: alpha.ipynb  autostudy.ipynb  autostudy.py  black_scholes.py  darts_setup.ipynb  darts_test.ipynb  darts_test.py
