[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.32.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "plotly>=5.24.1",
    "pytorch-forecasting>=1.2.0",
    "pytorch-lightning>=2.5.0.post0",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
